ChimpyLang/lang/ChimpyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4.1.9004
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4.1.9004 ./ChimpyLang/lang/ChimpyParser.g 2012-09-09 01:20:59

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


  //import java.util.ArrayList;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  ChimpyLang 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4.1.9004")]
[System.CLSCompliant(false)]
public partial class ChimpyParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "AT", "CATCH", "CLASS", "CLOSE_PARENT", "COLON", "COMMA", "COMMENT", "CONSTANT", "DEF", "DIGIT", "DIV", "DOT", "ELSE", "END", "EQ", "FALSE", "FLOAT", "GE", "GT", "ID_CHAR", "IF", "INTEGER", "LE", "LETTER", "LOWER", "LT", "MINUS", "MOD", "MUL", "NAME", "NEWLINE", "NIL", "NOT", "NUMBER", "OPEN_PARENT", "OR", "PLUS", "SELF", "SEMICOLON", "SPACE", "STRING", "TRUE", "TRY", "UPPER", "WHILE"
	};
	public const int EOF=-1;
	public const int AND=4;
	public const int ASSIGN=5;
	public const int AT=6;
	public const int CATCH=7;
	public const int CLASS=8;
	public const int CLOSE_PARENT=9;
	public const int COLON=10;
	public const int COMMA=11;
	public const int COMMENT=12;
	public const int CONSTANT=13;
	public const int DEF=14;
	public const int DIGIT=15;
	public const int DIV=16;
	public const int DOT=17;
	public const int ELSE=18;
	public const int END=19;
	public const int EQ=20;
	public const int FALSE=21;
	public const int FLOAT=22;
	public const int GE=23;
	public const int GT=24;
	public const int ID_CHAR=25;
	public const int IF=26;
	public const int INTEGER=27;
	public const int LE=28;
	public const int LETTER=29;
	public const int LOWER=30;
	public const int LT=31;
	public const int MINUS=32;
	public const int MOD=33;
	public const int MUL=34;
	public const int NAME=35;
	public const int NEWLINE=36;
	public const int NIL=37;
	public const int NOT=38;
	public const int NUMBER=39;
	public const int OPEN_PARENT=40;
	public const int OR=41;
	public const int PLUS=42;
	public const int SELF=43;
	public const int SEMICOLON=44;
	public const int SPACE=45;
	public const int STRING=46;
	public const int TRUE=47;
	public const int TRY=48;
	public const int UPPER=49;
	public const int WHILE=50;

	public ChimpyParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public ChimpyParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return ChimpyParser.tokenNames; } }
	public override string GrammarFileName { get { return "./ChimpyLang/lang/ChimpyParser.g"; } }


	  /**
	    Run the parsing process and return the root node of the AST.
	  */
	  public Node parse() {
	    root_return result = root();
	    if (result == null) return null;
	    return result.nodes;
	  }
	  
	  // Override to throw exceptions on parse error.
	  public override void ReportError(RecognitionException e) {
	    throw new RuntimeException(e);
	  }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	private sealed partial class root_return : AstParserRuleReturnScope<object, IToken>
	{
		public Nodes nodes;
		public root_return(ChimpyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChimpyParser grammar);
	}

	partial void EnterRule_root();
	partial void LeaveRule_root();
	// $ANTLR start "root"
	// ./ChimpyLang/lang/ChimpyParser.g:56:1: root returns [Nodes nodes] : ( terminator )? ( expressions )? EOF !;
	[GrammarRule("root")]
	private ChimpyParser.root_return root()
	{
		EnterRule_root();
		EnterRule("root", 1);
		TraceIn("root", 1);
		ChimpyParser.root_return retval = new ChimpyParser.root_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF3 = default(IToken);
		AstParserRuleReturnScope<object, IToken> terminator1 = default(AstParserRuleReturnScope<object, IToken>);
		ChimpyParser.expressions_return expressions2 = default(ChimpyParser.expressions_return);

		object EOF3_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "root");
		DebugLocation(56, 2);
		try
		{
			// ./ChimpyLang/lang/ChimpyParser.g:56:27: ( ( terminator )? ( expressions )? EOF !)
			DebugEnterAlt(1);
			// ./ChimpyLang/lang/ChimpyParser.g:57:5: ( terminator )? ( expressions )? EOF !
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(57, 5);
			// ./ChimpyLang/lang/ChimpyParser.g:57:5: ( terminator )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==NEWLINE||LA1_1==SEMICOLON))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// ./ChimpyLang/lang/ChimpyParser.g:57:5: terminator
				{
				DebugLocation(57, 5);
				PushFollow(Follow._terminator_in_root91);
				terminator1=terminator();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, terminator1.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(57, 17);
			// ./ChimpyLang/lang/ChimpyParser.g:57:17: ( expressions )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==AT||LA2_1==CLASS||(LA2_1>=CONSTANT && LA2_1<=DEF)||(LA2_1>=FALSE && LA2_1<=FLOAT)||(LA2_1>=IF && LA2_1<=INTEGER)||LA2_1==NAME||(LA2_1>=NIL && LA2_1<=NOT)||LA2_1==OPEN_PARENT||LA2_1==SELF||(LA2_1>=STRING && LA2_1<=TRY)||LA2_1==WHILE))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// ./ChimpyLang/lang/ChimpyParser.g:57:17: expressions
				{
				DebugLocation(57, 17);
				PushFollow(Follow._expressions_in_root94);
				expressions2=expressions();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, expressions2.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(57, 33);
			EOF3=(IToken)Match(input,EOF,Follow._EOF_in_root97); if (state.failed) return retval;
			DebugLocation(57, 35);
			if (state.backtracking == 0)
			{
				 retval.nodes = (expressions2!=null?expressions2.nodes:default(Nodes)); 
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		  catch(RecognitionException recognitionException) {
		    throw recognitionException;
		  }

		finally
		{
			TraceOut("root", 1);
			LeaveRule("root", 1);
			LeaveRule_root();
		}
		DebugLocation(58, 2);
		} finally { DebugExitRule(GrammarFileName, "root"); }
		return retval;

	}
	// $ANTLR end "root"

	private sealed partial class expressions_return : AstParserRuleReturnScope<object, IToken>
	{
		public Nodes nodes;
		public expressions_return(ChimpyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChimpyParser grammar);
	}

	partial void EnterRule_expressions();
	partial void LeaveRule_expressions();
	// $ANTLR start "expressions"
	// ./ChimpyLang/lang/ChimpyParser.g:61:1: expressions returns [Nodes nodes] :head= expression ( terminator tail= expression )* ( terminator )? ;
	[GrammarRule("expressions")]
	private ChimpyParser.expressions_return expressions()
	{
		EnterRule_expressions();
		EnterRule("expressions", 2);
		TraceIn("expressions", 2);
		ChimpyParser.expressions_return retval = new ChimpyParser.expressions_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		ChimpyParser.expression_return head = default(ChimpyParser.expression_return);
		ChimpyParser.expression_return tail = default(ChimpyParser.expression_return);
		AstParserRuleReturnScope<object, IToken> terminator4 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> terminator5 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "expressions");
		DebugLocation(61, 2);
		try
		{
			// ./ChimpyLang/lang/ChimpyParser.g:61:34: (head= expression ( terminator tail= expression )* ( terminator )? )
			DebugEnterAlt(1);
			// ./ChimpyLang/lang/ChimpyParser.g:62:23: head= expression ( terminator tail= expression )* ( terminator )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(62, 23);
			if (state.backtracking == 0)
			{
				 retval.nodes = new Nodes(); 
			}
			DebugLocation(63, 9);
			PushFollow(Follow._expression_in_expressions145);
			head=expression();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, head.Tree);
			DebugLocation(63, 23);
			if (state.backtracking == 0)
			{
				 retval.nodes.add((head!=null?head.node:default(Node))); 
			}
			DebugLocation(64, 5);
			// ./ChimpyLang/lang/ChimpyParser.g:64:5: ( terminator tail= expression )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				try
				{
					alt3 = dfa3.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// ./ChimpyLang/lang/ChimpyParser.g:64:6: terminator tail= expression
					{
					DebugLocation(64, 6);
					PushFollow(Follow._terminator_in_expressions156);
					terminator4=terminator();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, terminator4.Tree);
					DebugLocation(65, 10);
					PushFollow(Follow._expression_in_expressions165);
					tail=expression();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, tail.Tree);
					DebugLocation(65, 23);
					if (state.backtracking == 0)
					{
						 retval.nodes.add((tail!=null?tail.node:default(Node))); 
					}

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }

			DebugLocation(67, 5);
			// ./ChimpyLang/lang/ChimpyParser.g:67:5: ( terminator )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==NEWLINE||LA4_1==SEMICOLON))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// ./ChimpyLang/lang/ChimpyParser.g:67:5: terminator
				{
				DebugLocation(67, 5);
				PushFollow(Follow._terminator_in_expressions181);
				terminator5=terminator();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, terminator5.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		  catch(RecognitionException recognitionException) {
		    throw recognitionException;
		  }

		finally
		{
			TraceOut("expressions", 2);
			LeaveRule("expressions", 2);
			LeaveRule_expressions();
		}
		DebugLocation(68, 2);
		} finally { DebugExitRule(GrammarFileName, "expressions"); }
		return retval;

	}
	// $ANTLR end "expressions"

	private sealed partial class expression_return : AstParserRuleReturnScope<object, IToken>
	{
		public Node node;
		public expression_return(ChimpyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChimpyParser grammar);
	}

	partial void EnterRule_expression();
	partial void LeaveRule_expression();
	// $ANTLR start "expression"
	// ./ChimpyLang/lang/ChimpyParser.g:71:1: expression returns [Node node] : assignExpression ;
	[GrammarRule("expression")]
	private ChimpyParser.expression_return expression()
	{
		EnterRule_expression();
		EnterRule("expression", 3);
		TraceIn("expression", 3);
		ChimpyParser.expression_return retval = new ChimpyParser.expression_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		ChimpyParser.assignExpression_return assignExpression6 = default(ChimpyParser.assignExpression_return);

		try { DebugEnterRule(GrammarFileName, "expression");
		DebugLocation(71, 2);
		try
		{
			// ./ChimpyLang/lang/ChimpyParser.g:71:31: ( assignExpression )
			DebugEnterAlt(1);
			// ./ChimpyLang/lang/ChimpyParser.g:72:5: assignExpression
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(72, 5);
			PushFollow(Follow._assignExpression_in_expression201);
			assignExpression6=assignExpression();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, assignExpression6.Tree);
			DebugLocation(72, 27);
			if (state.backtracking == 0)
			{
				 retval.node = (assignExpression6!=null?assignExpression6.node:default(Node)); 
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		  catch(RecognitionException recognitionException) {
		    throw recognitionException;
		  }

		finally
		{
			TraceOut("expression", 3);
			LeaveRule("expression", 3);
			LeaveRule_expression();
		}
		DebugLocation(73, 2);
		} finally { DebugExitRule(GrammarFileName, "expression"); }
		return retval;

	}
	// $ANTLR end "expression"

	partial void EnterRule_terminator();
	partial void LeaveRule_terminator();
	// $ANTLR start "terminator"
	// ./ChimpyLang/lang/ChimpyParser.g:76:1: terminator : ( NEWLINE | SEMICOLON )+ ;
	[GrammarRule("terminator")]
	private AstParserRuleReturnScope<object, IToken> terminator()
	{
		EnterRule_terminator();
		EnterRule("terminator", 4);
		TraceIn("terminator", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set7 = default(IToken);

		object set7_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "terminator");
		DebugLocation(76, 34);
		try
		{
			// ./ChimpyLang/lang/ChimpyParser.g:76:11: ( ( NEWLINE | SEMICOLON )+ )
			DebugEnterAlt(1);
			// ./ChimpyLang/lang/ChimpyParser.g:76:13: ( NEWLINE | SEMICOLON )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(76, 13);
			// ./ChimpyLang/lang/ChimpyParser.g:76:13: ( NEWLINE | SEMICOLON )+
			int cnt5=0;
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				int LA5_1 = input.LA(1);

				if ((LA5_1==NEWLINE||LA5_1==SEMICOLON))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch (alt5)
				{
				case 1:
					DebugEnterAlt(1);
					// ./ChimpyLang/lang/ChimpyParser.g:
					{
					DebugLocation(76, 13);

					set7=(IToken)input.LT(1);
					if (input.LA(1)==NEWLINE||input.LA(1)==SEMICOLON)
					{
						input.Consume();
						if (state.backtracking == 0) adaptor.AddChild(root_0, (object)adaptor.Create(set7));
						state.errorRecovery=false;state.failed=false;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}


					}
					break;

				default:
					if (cnt5 >= 1)
						goto loop5;

					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee5 = new EarlyExitException( 5, input );
					DebugRecognitionException(eee5);
					throw eee5;
				}
				cnt5++;
			}
			loop5:
				;

			} finally { DebugExitSubRule(5); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		  catch(RecognitionException recognitionException) {
		    throw recognitionException;
		  }

		finally
		{
			TraceOut("terminator", 4);
			LeaveRule("terminator", 4);
			LeaveRule_terminator();
		}
		DebugLocation(76, 34);
		} finally { DebugExitRule(GrammarFileName, "terminator"); }
		return retval;

	}
	// $ANTLR end "terminator"

	private sealed partial class assignExpression_return : AstParserRuleReturnScope<object, IToken>
	{
		public Node node;
		public assignExpression_return(ChimpyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChimpyParser grammar);
	}

	partial void EnterRule_assignExpression();
	partial void LeaveRule_assignExpression();
	// $ANTLR start "assignExpression"
	// ./ChimpyLang/lang/ChimpyParser.g:82:1: assignExpression returns [Node node] : ( assign |e= orExpression );
	[GrammarRule("assignExpression")]
	private ChimpyParser.assignExpression_return assignExpression()
	{
		EnterRule_assignExpression();
		EnterRule("assignExpression", 5);
		TraceIn("assignExpression", 5);
		ChimpyParser.assignExpression_return retval = new ChimpyParser.assignExpression_return(this);
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		ChimpyParser.orExpression_return e = default(ChimpyParser.orExpression_return);
		ChimpyParser.assign_return assign8 = default(ChimpyParser.assign_return);

		try { DebugEnterRule(GrammarFileName, "assignExpression");
		DebugLocation(82, 2);
		try
		{
			// ./ChimpyLang/lang/ChimpyParser.g:82:37: ( assign |e= orExpression )
			int alt6=2;
			try { DebugEnterDecision(6, false);
			switch (input.LA(1))
			{
			case NAME:
				{
				int LA6_2 = input.LA(2);

				if ((LA6_2==ASSIGN))
				{
					alt6 = 1;
				}
				else if ((LA6_2==EOF||LA6_2==AND||LA6_2==CATCH||LA6_2==CLOSE_PARENT||LA6_2==COMMA||(LA6_2>=DIV && LA6_2<=EQ)||(LA6_2>=GE && LA6_2<=GT)||LA6_2==LE||(LA6_2>=LT && LA6_2<=MUL)||LA6_2==NEWLINE||(LA6_2>=OPEN_PARENT && LA6_2<=PLUS)||LA6_2==SEMICOLON))
				{
					alt6 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 6, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case CONSTANT:
				{
				int LA6_2 = input.LA(2);

				if ((LA6_2==ASSIGN))
				{
					alt6 = 1;
				}
				else if ((LA6_2==EOF||LA6_2==AND||LA6_2==CATCH||LA6_2==CLOSE_PARENT||LA6_2==COMMA||(LA6_2>=DIV && LA6_2<=EQ)||(LA6_2>=GE && LA6_2<=GT)||LA6_2==LE||(LA6_2>=LT && LA6_2<=MUL)||LA6_2==NEWLINE||(LA6_2>=OR && LA6_2<=PLUS)||LA6_2==SEMICOLON))
				{
					alt6 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 6, 2, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case AT:
				{
				int LA6_2 = input.LA(2);

				if ((LA6_2==NAME))
				{
					int LA6_3 = input.LA(3);

					if ((LA6_3==ASSIGN))
					{
						alt6 = 1;
					}
					else if ((LA6_3==EOF||LA6_3==AND||LA6_3==CATCH||LA6_3==CLOSE_PARENT||LA6_3==COMMA||(LA6_3>=DIV && LA6_3<=EQ)||(LA6_3>=GE && LA6_3<=GT)||LA6_3==LE||(LA6_3>=LT && LA6_3<=MUL)||LA6_3==NEWLINE||(LA6_3>=OR && LA6_3<=PLUS)||LA6_3==SEMICOLON))
					{
						alt6 = 2;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 6, 6, input, 3);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 6, 3, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case CLASS:
			case DEF:
			case FALSE:
			case FLOAT:
			case IF:
			case INTEGER:
			case NIL:
			case NOT:
			case OPEN_PARENT:
			case SELF:
			case STRING:
			case TRUE:
			case TRY:
			case WHILE:
				{
				alt6 = 2;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 6, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// ./ChimpyLang/lang/ChimpyParser.g:83:5: assign
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(83, 5);
				PushFollow(Follow._assign_in_assignExpression245);
				assign8=assign();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, assign8.Tree);
				DebugLocation(83, 27);
				if (state.backtracking == 0)
				{
					 retval.node = (assign8!=null?assign8.node:default(Node)); 
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ./ChimpyLang/lang/ChimpyParser.g:84:5: e= orExpression
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(84, 6);
				PushFollow(Follow._orExpression_in_assignExpression270);
				e=orExpression();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, e.Tree);
				DebugLocation(84, 27);
				if (state.backtracking == 0)
				{
					 retval.node = (e!=null?e.node:default(Node)); 
				}

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		  catch(RecognitionException recognitionException) {
		    throw recognitionException;
		  }

		finally
		{
			TraceOut("assignExpression", 5);
			LeaveRule("assignExpression", 5);
			LeaveRule_assignExpression();
		}
		DebugLocation(85, 2);
		} finally { DebugExitRule(GrammarFileName, "assignExpression"); }
		return retval;

	}
	// $ANTLR end "assignExpression"

	private sealed partial class orExpression_return : AstParserRuleReturnScope<object, IToken>
	{
		public Node node;
		public orExpression_return(ChimpyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChimpyParser grammar);
	}
